--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: base
   {% endif %}
 
   <div class="Publications">
-    <h2> Selected Papers:</h2>
+    <h2> Papers:</h2>
 
     {%- if posts.size > 0 -%}
     {%- if page.list_title -%}
