[add]: dataset post

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,9 +12,8 @@ layout: base
     <div class="news">
       <h2>News:</h2>
       <ul>
-        <li>New arXiv paper: Open-Structure: a Large Structural Benchmark Dataset for SLAM Parameterization and
-          Optimization Approaches </li>
-        <ul> paper | code | video </ul>
+        <li>New arXiv paper: Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms </li>
+        <ul> paper | <a href="https://github.com/yanyan-li/Open-Structure">code</a> </ul>
         <li>New arXiv paper: Factor Graph Optimization with Covisible and Extensible Connections</li>
         <li>New arXiv paper: Tracking, Understanding and Mapping in Large-scale Environments</li>
         <li>I joined in UTS Robotics Institute as a Research Scientist adviced by <a
