--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,10 +12,15 @@ layout: base
     <div class="news">
       <h2>News:</h2>
       <ul>
-        <li>New arXiv paper: Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms </li>
-        <ul> paper | <a href="https://github.com/yanyan-li/Open-Structure">code</a> </ul>
-        <li>New arXiv paper: Factor Graph Optimization with Covisible and Extensible Connections</li>
-        <li>New arXiv paper: Tracking, Understanding and Mapping in Large-scale Environments</li>
+        <li> Our Paper (10.18.2023) got accepted for publication in IEEE TIM
+          <ul>wMPS-SLAM: An Online and Accurate Monocular Visual-wMPS SLAM System</ul>
+        </li>
+        <li>New arXiv paper (10.10.2023): Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms </li>
+        <ul> <a href="https://arxiv.org/pdf/2310.10931.pdf">paper</a> |
+          <a href="https://github.com/yanyan-li/Open-Structure">code</a>
+        </ul>
+        <!-- <li>New arXiv paper: Factor Graph Optimization with Covisible and Extensible Connections</li> -->
+        <!-- <li>New arXiv paper: Tracking, Understanding and Mapping in Large-scale Environments</li> -->
         <li>I joined in UTS Robotics Institute as a Research Scientist adviced by <a
             href="https://profiles.uts.edu.au/Liang.Zhao">Prof. Liang Zhao</a> from 1st, Setp, 2023.
       </ul>
