--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,9 @@ layout: base
     <div class="news">
       <h2>News:</h2>
       <ul>
+        <li>
+          New arXiv paper (11.25.2023): ShapeMaker: Self-Supervised Joint Shape Canonicalization, Segmentation, Retrieval and Deformation
+        </li>
         <li> Our Paper (10.18.2023) got accepted for publication in IEEE TIM
           <ul>wMPS-SLAM: An Online and Accurate Monocular Visual-wMPS SLAM System</ul>
         </li>
