--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,8 +24,8 @@ layout: base
         </ul>
         <!-- <li>New arXiv paper: Factor Graph Optimization with Covisible and Extensible Connections</li> -->
         <!-- <li>New arXiv paper: Tracking, Understanding and Mapping in Large-scale Environments</li> -->
-        <li>I joined in UTS Robotics Institute as a Research Scientist adviced by <a
-            href="https://profiles.uts.edu.au/Liang.Zhao">Prof. Liang Zhao</a> from 1st, Setp, 2023.
+        <li>I joined in UTS as a Research Scientist adviced by <a
+            href="https://profiles.uts.edu.au/Liang.Zhao">Robotics Institute Prof. Liang Zhao </a> from 1st, Setp, 2023.
       </ul>
     </div>
 
