[feat]: add GeoGaussian

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,14 @@ layout: base
       <h2>News:</h2>
       <ul>
         <li>
+          New arXiv paper (03.20.2024): GeoGaussian: Geometry-aware Gaussian Splatting for Scene Rendering 
+          <ul> <a href="https://arxiv.org/pdf/2310.10931.pdf">Project Website</a> 
+          </ul>
+        </li>
+        <li>
+          Our new paper, ShapeMaker, is accepted to CVPR2024 
+        </li>
+        <li>
           New arXiv paper (11.25.2023): ShapeMaker: Self-Supervised Joint Shape Canonicalization, Segmentation, Retrieval and Deformation
         </li>
         <li> Our Paper (10.18.2023) got accepted for publication in IEEE TIM
