[geogaussian]:update arxiv

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: base
       <ul>
         <li>
           New arXiv paper (03.20.2024): GeoGaussian: Geometry-aware Gaussian Splatting for Scene Rendering 
-          <ul> <a href="https://arxiv.org/pdf/2310.10931.pdf">Project Website</a> 
+          <ul> <a href="project/gs/geogaussian">Project Website</a> 
           </ul>
         </li>
         <li>
