--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,8 @@ layout: base
     <div class="news">
       <h2>News:</h2>
       <ul>
+        <li>I joined in the CVRP group at NU Singapore as a Postdoc Research Fellow adviced by <a
+            href="https://www.comp.nus.edu.sg/~leegh/">Prof. Gim Hee Lee </a> from June, 2024.
         <li>
           New arXiv paper (03.20.2024): GeoGaussian: Geometry-aware Gaussian Splatting for Scene Rendering 
           <ul> <a href="project/gs/geogaussian">Project Website</a> 
@@ -32,8 +34,8 @@ layout: base
         </ul>
         <!-- <li>New arXiv paper: Factor Graph Optimization with Covisible and Extensible Connections</li> -->
         <!-- <li>New arXiv paper: Tracking, Understanding and Mapping in Large-scale Environments</li> -->
-        <li>I joined in UTS as a Research Scientist adviced by <a
-            href="https://profiles.uts.edu.au/Liang.Zhao">Robotics Institute Prof. Liang Zhao </a> from 1st, Setp, 2023.
+        <li>I worked (11.2023-05.2025) at UTS as a Research Scientist adviced by <a
+            href="https://profiles.uts.edu.au/Liang.Zhao">Robotics Institute Prof. Liang Zhao </a>.
       </ul>
     </div>
 
