--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,19 +12,24 @@ layout: base
     <div class="news">
       <h2>News:</h2>
       <ul>
+        <li>
+          Our new paper, GeoGaussian, is accepted to ECCV2024
+          <ul> <a href="project/gs/geogaussian">Project Website</a> 
+          </ul> 
+        </li>
         <li>I joined in the CVRP group at NU Singapore as a Postdoc Research Fellow adviced by <a
             href="https://www.comp.nus.edu.sg/~leegh/">Prof. Gim Hee Lee </a> from June, 2024.
-        <li>
+        <!-- <li>
           New arXiv paper (03.20.2024): GeoGaussian: Geometry-aware Gaussian Splatting for Scene Rendering 
           <ul> <a href="project/gs/geogaussian">Project Website</a> 
           </ul>
-        </li>
+        </li> -->
         <li>
           Our new paper, ShapeMaker, is accepted to CVPR2024 
         </li>
-        <li>
+        <!-- <li>
           New arXiv paper (11.25.2023): ShapeMaker: Self-Supervised Joint Shape Canonicalization, Segmentation, Retrieval and Deformation
-        </li>
+        </li> -->
         <li> Our Paper (10.18.2023) got accepted for publication in IEEE TIM
           <ul>wMPS-SLAM: An Online and Accurate Monocular Visual-wMPS SLAM System</ul>
         </li>
@@ -34,8 +39,8 @@ layout: base
         </ul>
         <!-- <li>New arXiv paper: Factor Graph Optimization with Covisible and Extensible Connections</li> -->
         <!-- <li>New arXiv paper: Tracking, Understanding and Mapping in Large-scale Environments</li> -->
-        <li>I worked (11.2023-05.2025) at UTS as a Research Scientist adviced by <a
-            href="https://profiles.uts.edu.au/Liang.Zhao">Robotics Institute Prof. Liang Zhao </a>.
+        <!-- <li>I worked (11.2023-05.2025) at UTS as a Research Scientist adviced by <a
+            href="https://profiles.uts.edu.au/Liang.Zhao">Robotics Institute Prof. Liang Zhao </a>. -->
       </ul>
     </div>
 
