--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,33 +12,28 @@ layout: base
     <div class="news">
       <h2>News:</h2>
       <ul>
-        <li>I joined in the CVRP group at NU Singapore as a Postdoc Research Fellow adviced by <a
-            href="https://www.comp.nus.edu.sg/~leegh/">Prof. Gim Hee Lee </a> from June, 2024.
         <li>
-          Our new paper, GeoGaussian, is accepted to ECCV2024
-          <ul> <a href="project/gs/geogaussian">Project Website</a> 
-          </ul> 
+          Our new paper, GeoGaussian (<a href="project/gs/geogaussian">Project Website</a> ), is accepted to ECCV2024
+           
         </li>
         <li>I joined in the CVRP group at NU Singapore as a Postdoc Research Fellow adviced by <a
             href="https://www.comp.nus.edu.sg/~leegh/">Prof. Gim Hee Lee </a> from June, 2024.
-        <!-- <li>
-          New arXiv paper (03.20.2024): GeoGaussian: Geometry-aware Gaussian Splatting for Scene Rendering 
+        </li>
+          <!-- New arXiv paper (03.20.2024): GeoGaussian: Geometry-aware Gaussian Splatting for Scene Rendering 
           <ul> <a href="project/gs/geogaussian">Project Website</a> 
-          </ul>
-        </li> -->
+          </ul> -->
         <li>
           Our new paper, ShapeMaker, is accepted to CVPR2024 
-        </li>
-        <!-- <li>
+        <!-- </li>
           New arXiv paper (11.25.2023): ShapeMaker: Self-Supervised Joint Shape Canonicalization, Segmentation, Retrieval and Deformation
-        </li> -->
+        </li>  -->
         <li> Our Paper (10.18.2023) got accepted for publication in IEEE TIM
           <ul>wMPS-SLAM: An Online and Accurate Monocular Visual-wMPS SLAM System</ul>
         </li>
-        <li>New arXiv paper (10.10.2023): Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms </li>
-        <ul> <a href="https://arxiv.org/pdf/2310.10931.pdf">paper</a> |
-          <a href="https://github.com/yanyan-li/Open-Structure">code</a>
-        </ul>
+        <li>New arXiv paper (10.10.2023): Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms 
+         (<a href="https://arxiv.org/pdf/2310.10931.pdf">Paper</a> |
+          <a href="https://github.com/yanyan-li/Open-Structure">Code</a>)
+        </li>
         <!-- <li>New arXiv paper: Factor Graph Optimization with Covisible and Extensible Connections</li> -->
         <!-- <li>New arXiv paper: Tracking, Understanding and Mapping in Large-scale Environments</li> -->
 
