--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,10 @@ layout: base
       <h2>News:</h2>
       <ul>
         <li>
+          Our new paper, Open-Structure (<a href="https://github.com/yanyan-li/Open-Structure">Github Code</a> ), is accepted to RA-L2024
+           
+        </li>
+        <li>
           Our new paper, GeoGaussian (<a href="project/gs/geogaussian">Project Website</a> ), is accepted to ECCV2024
            
         </li>
