--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,8 @@ layout: base
       <h2>News:</h2>
       <ul>
         <li>
-          Our new paper, Open-Structure (<a href="https://github.com/yanyan-li/Open-Structure">Github Code</a> ), is accepted to RA-L2024
-           
+          Our new paper, Open-Structure (<a href="https://arxiv.org/pdf/2310.10931.pdf">Paper</a> |
+          <a href="https://github.com/yanyan-li/Open-Structure">Code</a>), is accepted to RA-L2024
         </li>
         <li>
           Our new paper, GeoGaussian (<a href="project/gs/geogaussian">Project Website</a> ), is accepted to ECCV2024
@@ -34,10 +34,10 @@ layout: base
         <li> Our Paper (10.18.2023) got accepted for publication in IEEE TIM
           <ul>wMPS-SLAM: An Online and Accurate Monocular Visual-wMPS SLAM System</ul>
         </li>
-        <li>New arXiv paper (10.10.2023): Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms 
+<!--         <li>New arXiv paper (10.10.2023): Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms 
          (<a href="https://arxiv.org/pdf/2310.10931.pdf">Paper</a> |
           <a href="https://github.com/yanyan-li/Open-Structure">Code</a>)
-        </li>
+        </li> -->
         <!-- <li>New arXiv paper: Factor Graph Optimization with Covisible and Extensible Connections</li> -->
         <!-- <li>New arXiv paper: Tracking, Understanding and Mapping in Large-scale Environments</li> -->
 
