--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,10 @@ layout: base
       <h2>News:</h2>
       <ul>
         <li>
+          Our New arXiv paper (16.Sep.2023): LiLoc: Lifelong Localization using Adaptive Submap Joining
+and Egocentric Factor Graph (<a href="https://arxiv.org/pdf/2409.10172">Paper&Code</a>) can be obtained.
+        </li> 
+        <li>
           Our new paper, Open-Structure (<a href="https://arxiv.org/pdf/2310.10931.pdf">Paper</a> |
           <a href="https://github.com/yanyan-li/Open-Structure">Code</a>), is accepted to RA-L2024
         </li>
