--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,11 @@ layout: base
       <h2>News:</h2>
       <ul>
         <li>
-          Our New arXiv paper (16.Sep.2023): LiLoc: Lifelong Localization using Adaptive Submap Joining
+        Our New arXiv paper (01.Oct.2024): Robust Gaussian Splatting SLAM by Leveraging
+Loop Closure (<a href="https://arxiv.org/pdf/2409.20111">Paper</a>) can be obtained.
+        </li> 
+        <li>
+          Our New arXiv paper (16.Sep.2024): LiLoc: Lifelong Localization using Adaptive Submap Joining
 and Egocentric Factor Graph (<a href="https://arxiv.org/pdf/2409.10172">Paper&Code</a>) can be obtained.
         </li> 
         <li>
