--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,12 @@ layout: base
       <h2>News:</h2>
       <ul>
         <li>
+        Our New arXiv paper (28.Nov.2024): SmileSplat: Generalizable Gaussian Splats for Unconstrained Sparse Images (<a href="https://yanyan-li.github.io/project/gs/smilesplat.html">Project</a>) can be obtained.
+        </li>
+        <li> Our Paper (27.Nov.2024) got accepted for publication in IEEE TIM
+          <ul>Accurate Visual Odometry by Leveraging 2DoF Bearing-Only Measurements</ul>
+        </li>
+        <li>
         Our New arXiv paper (01.Oct.2024): Robust Gaussian Splatting SLAM by Leveraging
 Loop Closure (<a href="https://arxiv.org/pdf/2409.20111">Paper</a>) can be obtained.
         </li> 
