--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,8 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
+    We're excited to announce that the <span style="color:#0000FF;font-weight:bold;">1st Workshop on Advancements for Intelligent Robotics in 4D Scenes: Localization, Reconstruction, Rendering, and Generation</span> will be held in <span style="color:#B31B1B;font-weight:bold;">IROS 2025 (Hangzhou, China)</span>.  </li>
+  <li>
     Our paper: 
     SE (3)-Equivariance Learning for Category-level Object Pose Estimation 
     (<a href="https://ieeexplore.ieee.org/abstract/document/10964769/">Paper</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">IEEE TIM 2025</span>.
