--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,7 +84,7 @@ layout: base
   {% endif %}
 
   <div class="section-heading">
-    <h2> Selected Publications (<a href="https://scholar.google.com/citations?user=phzz5xcAAAAJ&hl=en"> Google Scholar</a>):</h2>
+    <h2> Selected Publications (<a href="https://scholar.google.com/citations?user=phzz5xcAAAAJ&hl=en">Google Scholar</a>, <a href="https://github.com/yanyan-li"> GitHub</a>):</h2>
     <b>*Equal contribution †Corresponding author</b>
     
     {%- if posts.size > 0 -%}
