--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,9 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
+    Invited to give a talk at the Tianjin University on <span style="color:#B31B1B;font-weight:bold;">June 3, 2025</span>: <span style="color:#033344;font-weight:bold;">Accurate Localization and Scene Reconstruction in 4D Space</span>.
+    </li>
+  <li>
     We're excited to announce that the <span style="color:#0000FF;font-weight:bold;">1st Workshop on Advancements for Intelligent Robotics in 4D Scenes: Localization, Reconstruction, Rendering, and Generation</span> will be held in <span style="color:#B31B1B;font-weight:bold;">IROS 2025 (Hangzhou, China)</span>: <a href="https://4drobotics-iros2025.github.io/">Website </a> </li>
   <li>
     Our paper: 
