--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,34 +15,40 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
-    Invited to give a talk at the Tianjin University on <span style="color:#B31B1B;font-weight:bold;">June 3, 2025</span>: <span style="color:#033344;font-weight:bold;">Accurate Localization and Scene Reconstruction in 4D Space</span>.
+    <b>22, June.</b> Our new <a href="https://www.sciencedirect.com/science/article/abs/pii/S0097849325001189">paper</a> is accepted to <span style="color:#B31B1B;font-weight:bold;">Computers & Graphics</span>
+  </li>
+  <li>
+    Invited to give a talk at <span style="color:#B31B1B;font-weight:bold;">Tianjin University</span> on June 3, 2025: <span style="color:#033344;font-weight:bold;">Accurate Localization and Scene Reconstruction in 4D Space</span>.
     </li>
   <li>
-    We're excited to announce that the <span style="color:#0000FF;font-weight:bold;">1st Workshop on Advancements for Intelligent Robotics in 4D Scenes: Localization, Reconstruction, Rendering, and Generation</span> will be held in <span style="color:#B31B1B;font-weight:bold;">IROS 2025 (Hangzhou, China)</span>: <a href="https://4drobotics-iros2025.github.io/">Website </a> </li>
+    <b>9, May.</b> We're excited to announce that the <span style="color:#0000FF;font-weight:bold;">1st Workshop on Advancements for Intelligent Robotics in 4D Scenes: Localization, Reconstruction, Rendering, and Generation</span> will be held in <span style="color:#B31B1B;font-weight:bold;">IROS 2025 (Hangzhou, China)</span>: <a href="https://4drobotics-iros2025.github.io/">Website </a> </li>
   <li>
-    Our paper: 
+    <b>15, April.</b> Our paper: 
     SE (3)-Equivariance Learning for Category-level Object Pose Estimation 
     (<a href="https://ieeexplore.ieee.org/abstract/document/10964769/">Paper</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">IEEE TIM 2025</span>.
   </li>
   <li>
-    Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
+    <b>20, March.</b> Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
     4D Gaussian Splatting SLAM 
     (<a href="https://arxiv.org/abs/2503.16710">Paper</a>) can be obtained.
   </li>
   <li>
-    Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
+    </b>11, March.</b> Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
     Robust Surface Reconstruction 
     (<a href="https://arxiv.org/abs/2503.08093">Paper</a>) can be obtained.
   </li>    
   <li>
-    Our paper: 
+    <b>26, Fed.</b> Our paper: 
     Learnable Infinite Taylor Gaussian for Dynamic View Rendering 
     (<a href="https://arxiv.org/html/2412.04282v2">Paper</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">CVPR2025</span>.
   </li>
   <li>
-    Our paper: 
+    <b>28, Jan.</b> Our paper: 
     Lifelong Localization using Adaptive Submap Joining and Egocentric Factor Graph 
     (<a href="https://arxiv.org/pdf/2409.10172">Paper&amp;Code</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">ICRA2025</span>.
+  </li>
+  <li>
+    <b>13, Jan.</b> Our new <a href="https://ieeexplore.ieee.org/abstract/document/10839262">paper</a> is accepted to <span style="color:#B31B1B;font-weight:bold;">IEEE Sensors Journal</span>
   </li>
 </ul>
     
