--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
-    <b>22, June.</b> Our new <a href="https://www.sciencedirect.com/science/article/abs/pii/S0097849325001189">paper</a> is accepted to <span style="color:#B31B1B;font-weight:bold;">Computers & Graphics</span>
+    <b>27, June.</b> 3 Papers are accepted to <span style="color:#B31B1B;font-weight:bold;">ICCV 2025</span>.     
   </li>
   <li>
     Invited to give a talk at <span style="color:#B31B1B;font-weight:bold;">Tianjin University</span> on June 3, 2025: <span style="color:#033344;font-weight:bold;">Accurate Localization and Scene Reconstruction in 4D Space</span>.
@@ -33,7 +33,7 @@ layout: base
     (<a href="https://arxiv.org/abs/2503.16710">Paper</a>) can be obtained.
   </li>
   <li>
-    </b>11, March.</b> Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
+    <b>11, March.</b> Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
     Robust Surface Reconstruction 
     (<a href="https://arxiv.org/abs/2503.08093">Paper</a>) can be obtained.
   </li>    
