--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
-    <b>27, June.</b> 3 Papers are accepted to <span style="color:#B31B1B;font-weight:bold;">ICCV 2025</span>.     
+    <b>27, June.</b> 3 Papers are accepted to <span style="color:#B31B1B;font-weight:bold;">ICCV 2025</span> in 4D SLAM; Monocuar-based Scene Graph Prediction; Autonomous Driving Gaussian Splatting.     
   </li>
   <li>
     Invited to give a talk at <span style="color:#B31B1B;font-weight:bold;">Tianjin University</span> on June 3, 2025: <span style="color:#033344;font-weight:bold;">Accurate Localization and Scene Reconstruction in 4D Space</span>.
