--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,13 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
-    <b>27, June.</b> Three papers are accepted to <span style="color:#B31B1B;font-weight:bold;">ICCV 2025</span> in 4D SLAM; Monocuar-based Scene Graph Prediction; Autonomous Driving Gaussian Splatting.     
+    <b>18, Aug.</b> The review process of <a href="https://4drobotics-iros2025.github.io/">IROS2025 Workshop AIR4D</a> was completed. Looking forward to seeing you in Hangzhou! 
+  </li>
+  <li>
+    <b>6, Aug.</b> Our New arXiv <a href="https://arxiv.org/pdf/2508.04335">paper</a>: Riemannian Manifold Representation of 3D Lines for Factor Graph Optimization. 
+  </li>
+  <li>
+    <b>27, June.</b> Three papers are accepted to <span style="color:#B31B1B;font-weight:bold;">ICCV 2025</span> in <a href="https://yanyan-li.github.io/project/gs/4dgsslam.html">4D SLAM</a>; <a href="https://arxiv.org/pdf/2508.06546">Scene Graph Prediction</a>; <a href="https://arxiv.org/pdf/2412.05548">Autonomous Driving Gaussian Splatting</a>.     
   </li>
   <li>
     <b>25, June.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">Computers & Graphics</span>.
