--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,9 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
+    <b>19, Sep.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">NeurIPS 2025</span>: 4D3R: Motion-Aware Neural Reconstruction and Rendering of Dynamic Scenes from Monocular Videos.     
+  </li>
+  <li>
     <b>18, Aug.</b> The review process of <a href="https://4drobotics-iros2025.github.io/">IROS2025 Workshop AIR4D</a> was completed. Looking forward to seeing you in Hangzhou! 
   </li>
   <li>
