--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,13 +15,16 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
-    <b>19, Sep.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">NeurIPS 2025</span>: 4D3R: Motion-Aware Neural Reconstruction and Rendering of Dynamic Scenes from Monocular Videos.     
+    <b>11, Oct.</b> Appointed as an Associate Editor of <a href="https://www.ieee-ras.org/publications/ra-l">IEEE Robotics and Automation Letters (RA-L)</a>. Looking forward to working with the great editorial board and contributing to the robotics community!     
+  </li>
+  <li>
+    <b>19, Sep.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">NeurIPS 2025</span>:CO 4D3R: Motion-Aware Neural Reconstruction and Rendering of Dynamic Scenes from Monocular Videos.     
   </li>
   <li>
     <b>18, Aug.</b> The review process of <a href="https://4drobotics-iros2025.github.io/">IROS2025 Workshop AIR4D</a> was completed. Looking forward to seeing you in Hangzhou! 
   </li>
   <li>
-    <b>6, Aug.</b> Our New arXiv <a href="https://arxiv.org/pdf/2508.04335">paper</a>: Riemannian Manifold Representation of 3D Lines for Factor Graph Optimization. 
+    <b>6, Aug.</b> Our New <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: Riemannian Manifold Representation of 3D Lines for Factor Graph Optimization. [<a href="https://arxiv.org/pdf/2508.04335">Paper</a> | <a href="https://github.com/yanyan-li/RiemanLine">Code</a>] can be obtained.
   </li>
   <li>
     <b>27, June.</b> Three papers are accepted to <span style="color:#B31B1B;font-weight:bold;">ICCV 2025</span> in <a href="https://yanyan-li.github.io/project/gs/4dgsslam.html">4D SLAM</a>; <a href="https://arxiv.org/pdf/2508.06546">Scene Graph Prediction</a>; <a href="https://arxiv.org/pdf/2412.05548">Autonomous Driving Gaussian Splatting</a>.     
