--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,10 +15,10 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
-    <b>11, Oct.</b> Appointed as an Associate Editor of <a href="https://www.ieee-ras.org/publications/ra-l">IEEE Robotics and Automation Letters (RA-L)</a>. Looking forward to working with the great editorial board and contributing to the robotics community!     
+    <b>11, Oct.</b> Appointed as an Associate Editor of <span style="color:#0000FF;font-weight:bold;">IEEE Robotics and Automation Letters</span> (<a href="https://www.ieee-ras.org/publications/ra-l">RA-L</a>). Looking forward to working with the great editorial board and contributing to the robotics community!     
   </li>
   <li>
-    <b>19, Sep.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">NeurIPS 2025</span>:CO 4D3R: Motion-Aware Neural Reconstruction and Rendering of Dynamic Scenes from Monocular Videos.     
+    <b>19, Sep.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">NeurIPS 2025</span>: 4D3R: Motion-Aware Neural Reconstruction and Rendering of Dynamic Scenes from Monocular Videos.     
   </li>
   <li>
     <b>18, Aug.</b> The review process of <a href="https://4drobotics-iros2025.github.io/">IROS2025 Workshop AIR4D</a> was completed. Looking forward to seeing you in Hangzhou! 
