--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,9 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
+  <b>26, Oct.</b> Chaired the <span style="color:#0000FF;font-weight:bold;">Online Session 3 – Digital Image Processing and Applications</span> at IEEE ICRCV.
+  </li>
+  <li>
     <b>11, Oct.</b> Appointed as an Associate Editor of <span style="color:#0000FF;font-weight:bold;">IEEE Robotics and Automation Letters</span> (<a href="https://www.ieee-ras.org/publications/ra-l">RA-L</a>). Looking forward to working with the great editorial board and contributing to the robotics community!     
   </li>
   <li>
