--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,10 @@ layout: base
       <h3>News:</h3>
 <ul>
   <li>
+    <b>8, Nov.</b> Two <b>Oral papers</b> are accepted to <span style="color:#B31B1B;font-weight:bold;">AAAI 2026</span> in <a href="https://yanyan-li.github.io/project/gs/4dgsslam.html">RiemanLine Parametrization</a> and Active3D</a>.
+    [<a href="https://github.com/yanyan-li/RiemanLine/tree/master" >Source Code</a>|<a href="https://www.arxiv.org/pdf/2508.04335" >Paper</a>] of RiemanLine.
+  </li>
+  <li>
   <b>26, Oct.</b> Chaired the <span style="color:#0000FF;font-weight:bold;">Online Session 3 – Digital Image Processing and Applications</span> at IEEE ICRCV.
   </li>
   <li>
