--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -115,7 +115,11 @@ layout: base
 
   <div class="section-heading">
     <h2> Selected Publications (<a href="https://scholar.google.com/citations?user=phzz5xcAAAAJ&hl=en">Google Scholar</a>, <a href="https://github.com/yanyan-li"> GitHub</a>):</h2>
-    <b>*Equal contribution †Corresponding author</b>
+    <b>*Equal contribution †Corresponding author</b> 
+    <div style="font-size: 0.85em; color: #888; margin-bottom: 10px">
+        <b>Name Update:</b> I previously published under the name Yanyan Li. 
+        All works under that name refer to the same author.
+    </div>
     
     {%- if posts.size > 0 -%}
     {%- if page.list_title -%}
